# planegame

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  blender_mesh_export.py
src/: CMakeLists.txt  Main.cpp
src/content/: CMakeLists.txt
src/content/content/: FPSCameraScript.h  Loader.cpp  Loader.h  MissileScript.cpp  MissileScript.h  MovingObjectGeneratorScript.cpp  MovingObjectGeneratorScript.h  MovingObjectScript.cpp  MovingObjectScript.h  PlaneChaseCameraScript.cpp  PlaneChaseCameraScript.h  PlaneControlScript.cpp  PlaneControlScript.h
src/engine/: CMakeLists.txt  imgui_demo.cpp
src/engine/engine/: Application.cpp  Application.h  Components.cpp  Object.cpp  Object.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  ScriptIncludes.h  StringID.cpp
src/engine/engine/Component/: Camera.cpp  Camera.h  Component.cpp  Light.h  MeshRenderer.h  Script.cpp  Script.h  Transform.cpp
src/engine/engine/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/engine/engine/Renderer/glad/: glad.c
src/glad/: glad.h
src/main/: CMakeLists.txt  Main.cpp
src/planegame/: Application.cpp  Application.h  Camera.h  Components.cpp  Components.h  Debug.h  Input.h  Main.cpp  Object.cpp  Object.h  Random.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  ScriptContext.h  StringID.cpp  StringID.h  Time.h  Transform.h
src/planegame/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.h  MeshRenderer.h  Script.cpp  Script.h  Transform.cpp  Transform.h
src/planegame/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/planegame/Scripts/: FPSCameraScript.h  MovingObjectGeneratorScript.cpp  MovingObjectGeneratorScript.h  MovingObjectScript.cpp  MovingObjectScript.h  PlaneChaseCameraScript.cpp  PlaneChaseCameraScript.h  PlaneControlScript.cpp  PlaneControlScript.h  ScriptIncludes.h
